# bq-runner

./: .dockerignore  .gitignore  Cargo.toml  Containerfile  PLAN.md  README.md  compose.yaml
.githooks/: pre-commit
.github/workflows/: build-binaries.yml  publish.yml
adaptors/clojure/: README.md  e2e.sh
adaptors/clojure/src/bq_runner/: api.clj  client.clj  rpc.clj
adaptors/clojure/test/bq_runner/: client_test.clj  dag_test.clj  olap_test.clj  test_server.clj
scripts/: build.sh  run-detached.sh  run.sh  stop.sh
src/: error.rs  lib.rs  loader.rs  main.rs  utils.rs
src/dag/: executor.rs  registry.rs
src/executor/: bigquery.rs  mod.rs  yachtsql.rs
src/rpc/: handler.rs  methods.rs  mod.rs  types.rs
src/session/: dag.rs  manager.rs  mod.rs  pipeline.rs
tests/: integration_test.rs
