[package]
name = "bq-runner"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full", "sync"] }
tokio-util = "0.7"
axum = { version = "0.7", features = ["ws"] }
duckdb = { version = "1.1", features = ["bundled"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

sqlparser = "0.53"

uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
num_cpus = "1"
parking_lot = "0.12"
futures = "0.3"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
async-trait = "0.1"
gcp-bigquery-client = { version = "0.22", features = ["native-tls"] }
