[package]
name = "bq-runner"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full", "sync"] }
axum = { version = "0.7", features = ["ws"] }
yachtsql = { path = "../yachtSQL" }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
parking_lot = "0.12"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
futures = "0.3"
google-cloud-bigquery = "0.15"
google-cloud-auth = "0.19"
parquet = "54"
arrow = "54"
chrono = "0.4"
rust_decimal = "1"
base64 = "0.22"
hex = "0.4"

[dev-dependencies]
tempfile = "3"
